linked pages together, added images folder

--- a/bisonMatchApp/templates/bisonMatchApp/profile.html
+++ b/bisonMatchApp/templates/bisonMatchApp/profile.html
@@ -40,7 +40,7 @@
         <h4 class="instructions">Upload a photo to continue</h4>
         <p>Please try to choose a square photo to avoid your photo looking squashed or stretched.</p>
 
-        <a href="quiz.html" class="btn btn-primary small-btn">Continue</a>
+        <a href="/bisonMatch/quiz/" class="btn btn-primary small-btn">Continue</a>
       </div>
     </div>
 
