--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -22,8 +22,11 @@
 
     <!-- Custom CSS -->
     <link href={% static "bisonMatchApp/css/stylish-portfolio.css" %} rel="stylesheet">
-    <link href="css/forms.css" rel="stylesheet">
-    <link href="css/forms.css" rel="stylesheet">
+
+
+
+    
+    <link href={% static "bisonMatchApp/css/forms.css" %} rel="stylesheet">
 
   </head>
 
@@ -46,6 +49,8 @@
 
           <div class="form-container active">
             <h2>Question 1</h2>
+              
+              <img src={% static "bisonMatchApp/images/bmLogo.png" %} class="img-fluid" alt="Responsive image">
 
             <div class="box">
               <input type="radio" id="radio1" name="question1"/>
@@ -69,6 +74,8 @@
           <div class="form-container">
             <h2>Question 2</h2>
 
+                        <img src={% static "bisonMatchApp/images/bmLogo.png" %} class="img-fluid" alt="Responsive image">
+
             <div class="box">
               <input type="radio" id="radio5" name="question2"/>
               <label for="radio5">Parakeet</label>
@@ -90,6 +97,8 @@
 
           <div class="form-container">
             <h2>Question 3</h2>
+
+            <img src={% static "bisonMatchApp/images/bmLogo.png" %} class="img-fluid" alt="Responsive image">
 
             <div class="box">
               <input type="radio" id="radio9" name="question3"/>
@@ -115,6 +124,8 @@
 
           <div class="form-container">
             <h2>Question 4</h2>
+              
+              <img src={% static "bisonMatchApp/images/bmLogo.png" %} class="img-fluid" alt="Responsive image">
 
             <div class="box">
               <input type="radio" id="radio14" name="question4"/>
@@ -136,9 +147,6 @@
         </div>
       </div>
     </form>
-
-
-
 
 
     <!-- Footer -->
@@ -166,17 +174,18 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src={% static "bisonMatchApp/vendor/jquery/jquery.min.js" %}></script>
+    <script src={% static "bisonMatchApp/vendor/bootstrap/js/bootstrap.bundle.min.js" %}></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src={% static "bisonMatchApp/vendor/jquery-easing/jquery.easing.min.js" %}></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/stylish-portfolio.min.js"></script>
+    <script src={% static "bisonMatchApp/js/stylish-portfolio.min.js" %}></script>
 
     <!-- Question control -->
-    <script src="js/question-control.js"></script>
+    <script src={% static "bisonMatchApp/js/question-control.js" %}></script>
+
 
   </body>
 
