--- a/bisonMatchApp/templates/bisonMatchApp/index.html
+++ b/bisonMatchApp/templates/bisonMatchApp/index.html
@@ -34,7 +34,7 @@
         <h3 class="mb-5">
           <em>A Matchmaking Service for Lipscomb Students</em>
         </h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="/bisonMatch/profile/">Find your matches!</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="/bisonMatch/get_image/">Find your matches!</a>
       </div>
       <div class="overlay"></div>
     </header>
@@ -105,7 +105,7 @@
              All proceeds will go to raising funds for LU's ACM student chapter.
              </p> 
             
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/profile/">Take the Quiz</a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/get_image/">Take the Quiz</a>
           </div>
         </div>
       </div>
