--- a/bisonMatchApp/static/bisonMatchApp/css/profile.css
+++ b/bisonMatchApp/static/bisonMatchApp/css/profile.css
@@ -12,14 +12,8 @@
   padding-bottom: 10%;
 }
 
-.row {
-  background-color: #fa8072;
-}
-
-
 .instructions {
-  padding-top: 3%;
-  margin: 0 auto;
+  margin: 0px auto;
 }
 
 
