--- a/bisonMatchApp/templates/includes/head.html
+++ b/bisonMatchApp/templates/includes/head.html
@@ -6,7 +6,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>Bison Match!</title>
 
   <!-- Bootstrap Core CSS -->
   <link href={% static "bisonMatchApp/vendor/bootstrap/css/bootstrap.min.css" %} rel="stylesheet">
