worked on footer, carousel, redid models

--- a/bisonMatchApp/templates/bisonMatchApp/about.html
+++ b/bisonMatchApp/templates/bisonMatchApp/about.html
@@ -1,2 +1,52 @@
+{% extends './default.html' %}
+{% load static %}
 
-<p> about me </p>
+{% block content %}
+    <section class="content-section bg-primary text-white text-center" id="services">
+      <div class="container">
+        <div class="content-section-heading">
+          <h2 class="mb-5">About BisonMatch: FAQ, Quiz breakdown, Improvments etc</h2>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-10 mx-auto">
+              <div class="row">
+                  <div class="col-md-6 col-sm-12">
+
+                  <i class="far fa-credit-card fa-3x "></i> <br><br>
+                    <p class="lead mb-5">
+                    Pay online
+                    == insert button here ==
+                  </p>
+      
+                </div>
+
+              <div class="col-md-6 col-sm-12">
+              <i class="fas fa-pen fa-3x"></i><br><br>
+              <p class="lead mb-5">
+                  Meet us at the student center:
+                  here be ye dates
+                  </p>
+              </div>
+
+              </div>
+             <p class="lead mb-5">
+             Insert a meme somewhere, please. <br>
+
+             All proceeds will go to raising funds for LU's ACM student chapter.
+             </p> 
+            
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/">Home</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+{% endblock %}
+
+
+
+
+
+
+
