--- a/bisonMatchApp/templates/bisonMatchApp/index.html
+++ b/bisonMatchApp/templates/bisonMatchApp/index.html
@@ -1,4 +1,4 @@
-{% extends 'default.html' %}
+{% extends './default.html' %}
 {% load static %}
 
 {% block content %}
@@ -80,17 +80,60 @@
            All proceeds will go to raising funds for LU's ACM student chapter.
            </p>
 
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/get_image/">Take the Quiz</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/quiz/">Take the Quiz</a>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Callout -->
-  <section class="callout">
-    <div class="container text-center">
-      <h2 class="mx-auto mb-5">Get <em>your</em> slideshow of "sucess stories, missed connections" </h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Purchase Now!</a>
+  <section class="content-section bg-secondary text-white text-center" id="services">
+   <h2 class="mx-auto mb-4 text-center">Hear from some of our <em>satisfied</em> customers</h2>
+ <div class="container">
+          {% comment %}  <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Purchase Now!</a> {% endcomment %}
+
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{% static "bisonMatchApp/img/bmLogo.png" %}" class="d-block w-50" alt="...">
     </div>
+    <div class="carousel-item">
+      <img src="{% static "bisonMatchApp/img/bmLogo.png" %}" class="d-block w-50" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static "bisonMatchApp/img/bmLogo.png" %}" class="d-block w-50" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+    
+
+    </div> 
+    
+
+
+
+
+
+
+
   </section>
+
+
+
+
+
 {% endblock %}
