--- a/bisonMatchApp/templates/bisonMatchApp/index.html
+++ b/bisonMatchApp/templates/bisonMatchApp/index.html
@@ -87,50 +87,15 @@
   </section>
 
   <!-- Callout -->
-  <section class="content-section bg-secondary text-white text-center" id="services">
-   <h2 class="mx-auto mb-4 text-center">Hear from some of our <em>satisfied</em> customers</h2>
- <div class="container">
-          {% comment %}  <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Purchase Now!</a> {% endcomment %}
-
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static "bisonMatchApp/img/bmLogo.png" %}" class="d-block w-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static "bisonMatchApp/img/bmLogo.png" %}" class="d-block w-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static "bisonMatchApp/img/bmLogo.png" %}" class="d-block w-50" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-    
-
-    </div> 
-    
+  <section class="Callout">
 
 
-
-
-
-
-
-  </section>
+   <section class="callout">
+	    <div class="container text-center">
+	      <h2 class="mx-auto mb-5">Hear from some of our <em>satisfied</em> customers </h2>
+        <h1> instagram plugin here </p>
+	    </div>
+	  </section>
 
 
 
