changed quiz to submit int vals

--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -49,19 +49,21 @@
 
         <div class="float-right even-height">
           <label class="not-radio">*Gender: </label>
-          <input type="radio" id="radio100" value="male" name="gender" required/>
+          <input type="radio" id="radio100" value="0" name="gender" required/>
           <label class="special-radio" for="radio100">Male</label>
-          <input type="radio" id="radio101" value="female" name="gender"/>
+          <input type="radio" id="radio101" value="1" name="gender"/>
           <label class="special-radio" for="radio101">Female</label>
         </div>
 
                     
     <div class="float-right even-height"> 
           <label class="not-radio">*Preference: </label>
-          <input type="radio" id="radio200" value="male" name="preference" required/>
+          <input type="radio" id="radio200" value="0" name="preference" required/>
           <label class="special-radio" for="radio200">Male</label>
-          <input type="radio" id="radio201" value="female" name="preference"/>
+          <input type="radio" id="radio201" value="1" name="preference"/>
           <label class="special-radio" for="radio201">Female</label>
+                    <input type="radio" id="radio202" value="2" name="preference"/>
+          <label class="special-radio" for="radio202">Both</label>
         </div>
 
 
