Added uploading image capabilities

--- a/bisonMatchApp/static/bisonMatchApp/css/forms.css
+++ b/bisonMatchApp/static/bisonMatchApp/css/forms.css
@@ -6,6 +6,10 @@
   display: none;
 }
 
+#image-upload-button {
+  display: none;
+}
+
 /*
 Styling for the profile image upload
 and profile information form
