--- a/bisonMatchApp/templates/bisonMatchApp/includes/javascript_includes.html
+++ b/bisonMatchApp/templates/bisonMatchApp/includes/javascript_includes.html
@@ -11,3 +11,6 @@
 
 <!-- Question control -->
 <script src={% static "bisonMatchApp/js/question-control.js" %}></script>
+
+<!-- Croppie include -->
+<script src={% static "bisonMatchApp/js/croppie.js" %}></script>
