--- a/bisonMatchApp/static/bisonMatchApp/css/profile.css
+++ b/bisonMatchApp/static/bisonMatchApp/css/profile.css
@@ -1,3 +1,26 @@
+/*
+ Croppie stuff...
+*/
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+}
+
+#croppie {
+  max-height: 40%;
+}
+
+
+
+
+
+
 .card {
   padding: 5% 0;
 }
@@ -28,6 +51,16 @@
   -webkit-box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+#profile-image {
+  display: none;
+  width: 256px;
+  height: 256px;
+  border-radius: 128px;
+  border-radius: 50%;
+
+  object-fit: cover;
 }
 
 .fa-user {
