--- a/bisonMatchApp/templates/bisonMatchApp/includes/head.html
+++ b/bisonMatchApp/templates/bisonMatchApp/includes/head.html
@@ -14,12 +14,13 @@
   <!-- Custom Fonts -->
   <link href={% static "bisonMatchApp/vendor/fontawesome-free/css/all.min.css" %} rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href={% static "bisonMatchApp/vendor/simple-line-icons/css/simple-line-icons.css" %} rel="stylesheet">
+  <link href={% static "bisonMatchApp/vendor/simple-line-icons/css/simple-line-icons.css" %} rel="stylesheet" />
 
 
   <!-- Custom CSS -->
-  <link href={% static "bisonMatchApp/css/stylish-portfolio.css" %} rel="stylesheet">
-  <link href={% static "bisonMatchApp/css/profile.css" %} rel="stylesheet">
-  <link href={% static "bisonMatchApp/css/forms.css" %} rel="stylesheet">
+  <link href={% static "bisonMatchApp/css/stylish-portfolio.css" %} rel="stylesheet" />
+  <link href={% static "bisonMatchApp/css/profile.css" %} rel="stylesheet" />
+  <link href={% static "bisonMatchApp/css/forms.css" %} rel="stylesheet" />
+  <link rel="stylesheet" href={% static "bisonMatchApp/css/croppie.css" %} />
 
 </head>
