started on payments

--- a/bisonMatchApp/templates/bisonMatchApp/thanks.html
+++ b/bisonMatchApp/templates/bisonMatchApp/thanks.html
@@ -21,7 +21,9 @@
                   <i class="far fa-credit-card fa-3x "></i> <br><br>
                     <p class="lead mb-5">
                     Pay online
-                    == insert button here ==
+                    <a href="https://connect.squareup.com/v2/checkout?c={{CHECKOUT_ID}}&l={{LOCATION_ID}}">
+                    <button type="button" class="btn btn-primary">Primary</button>
+                    </a>
                   </p>
       
                 </div>
