add new match table, add extra gender option, comment about closing cursor and connection

--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -63,6 +63,8 @@
           <label class="special-radio" for="radio100">Male</label>
           <input type="radio" id="radio101" value="1" name="gender"/>
           <label class="special-radio" for="radio101">Female</label>
+          <input type="radio" id="radio101" value="2" name="gender"/>
+          <label class="special-radio" for="radio101">Undefined</label>
         </div>
 
         <label class="not-radio no-float">Bio: </label>
