Added some of those updates...

--- a/bisonMatchApp/static/bisonMatchApp/css/forms.css
+++ b/bisonMatchApp/static/bisonMatchApp/css/forms.css
@@ -156,7 +156,7 @@ Progress bar
 }
 
 .no-container-row {
-  background-color: #fa8072;
+  background-color: #FFC0CB;
   overflow-x: hidden;
   margin: 0;
 }
