added the questions we have, styled, started on paypal payment option

--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -168,8 +168,8 @@
         <div class="form-container">
            <h2 class="text-center">Question 2</h2>
 
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+           <h4 class="text-center">TODO:You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
 
           <div class="box">
             <input type="radio" id="radio5" value="0" name="question2" required/>
@@ -194,23 +194,21 @@
            <h2 class="text-center">Question 3</h2>
 
           <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+           <h4 class="text-center"> On a typical Saturday, you’ll find me:</h4>
 
           <div class="box">
             <input type="radio" id="radio9" value="0" name="question3" required/>
-            <label for="radio9">Very Likely</label>
+            <label for="radio9">Probably studying. That MCAT ain’t gonna pass itself.</label>
 
             <input type="radio" id="radio10" value="1" name="question3"/>
-            <label for="radio10">Somewhat Likely</label>
+            <label for="radio10">Any kind of physical activity. Hiking anyone?</label>
 
             <input type="radio" id="radio11" value="2" name="question3"/>
-            <label for="radio11">Neutral</label>
+            <label for="radio11">TODO</label>
 
             <input type="radio" id="radio12" value="3" name="question3"/>
-            <label for="radio12">Somewhat Unlikely</label>
+            <label for="radio12">TODO</label>
 
-            <input type="radio" id="radio13" value="4" name="question3"/>
-            <label for="radio13">Very Unlikely</label>
           </div>
 
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
@@ -223,20 +221,20 @@
            <h2 class="text-center">Question 4</h2>
 
           <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+           <h4 class="text-center"> When it comes to scary movies: </h4>
 
           <div class="box">
             <input type="radio" id="radio14" value="0" name="question4" required/>
-            <label for="radio14">Very Likely</label>
+            <label for="radio14">I love them! I can’t wait for SAW 23 to come out.</label>
 
             <input type="radio" id="radio15" value="1" name="question4"/>
-            <label for="radio15">Somewhat Likely</label>
+            <label for="radio15">Um, no. I’d never sleep again!</label>
 
             <input type="radio" id="radio16" value="2" name="question4"/>
-            <label for="radio16">Neutral</label>
+            <label for="radio16">I’ll watch them if I have someone to snuggle with.</label>
 
             <input type="radio" id="radio17" value="3" name="question4"/>
-            <label for="radio17">Somewhat Unlikely</label>
+            <label for="radio17">I’d rather watch something else. Can you say “predictable”?</label>
           </div>
 
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
@@ -248,7 +246,7 @@
         <div class="form-container">
            <h2 class="text-center">Question 5</h2>
           <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+           <h4 class="text-center">TODO:You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
 
           <div class="box">
             <input type="radio" id="radio18" value="0" name="question5" required/>
@@ -299,7 +297,7 @@
            <h2 class="text-center">Question 7</h2>
 
           <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+           <h4 class="text-center">TODO:You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
 
           <div class="box">
             <input type="radio" id="radio26" value="0" name="question7" required/>
@@ -351,20 +349,20 @@
           <h2 class="text-center">Question 9</h2>
 
           <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+           <h4 class="text-center">The newest smartphone just came out. You:</h4>
 
           <div class="box">
             <input type="radio" id="radio34" value="0" name="question9" required/>
-            <label for="radio34">Very Likely</label>
+            <label for="radio34">Buy it as soon as it drops. Money isn’t everything and I love having the newest technology!</label>
 
             <input type="radio" id="radio35" value="1" name="question9"/>
-            <label for="radio35">Somewhat Likely</label>
+            <label for="radio35">Wait a couple of months for it, that way I can get it at a cheaper price.</label>
 
             <input type="radio" id="radio36" value="2" name="question9"/>
-            <label for="radio36">Neutral</label>
+            <label for="radio36">I’ll get it when the next one comes out. That’s when the price for this one is at its prime.</label>
 
             <input type="radio" id="radio37" value="3" name="question9"/>
-            <label for="radio37">Somewhat Unlikely</label>
+            <label for="radio37">I still have my (insert smartphone model here) 5, why would I spend a penny on a new one if this one still works?</label>
           </div>
 
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
