--- a/bisonMatchApp/templates/bisonMatchApp/matches.html
+++ b/bisonMatchApp/templates/bisonMatchApp/matches.html
@@ -22,7 +22,7 @@
       <p><b>Major:</b> {{match.3}}</p>
       <p><b>Bio:</b> {{ match.4 }}</p>
       <p><b>Ideal Date:</b> {{match.5}}</p>
-      <p><b>Percentage Matched:</b> {{match.19}}% !</p>
+      <p><b>Percentage Matched:</b> {{match.19}}%</p>
     </div>
 
     <div class="col-lg-3 col-md-2 col-sm-1 col-1"></div>
