--- a/bisonMatchApp/templates/bisonMatchApp/about.html
+++ b/bisonMatchApp/templates/bisonMatchApp/about.html
@@ -4,42 +4,114 @@
 {% block content %}
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
-        <div class="content-section-heading">
-          <h2 class="mb-5">About BisonMatch: FAQ, Quiz breakdown, Improvments etc</h2>
-        </div>
+          <div class="content-section-heading">
+            <h2 class="mb-5">About BisonMatch: FAQ, Improvments, Contact Information</h2>
+          </div>
 
-        <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <div class="row">
-                  <div class="col-md-6 col-sm-12">
+          <div class="row">
 
-                  <i class="far fa-credit-card fa-3x "></i> <br><br>
-                    <p class="lead mb-5">
-                    Pay online
-                    == insert button here ==
-                  </p>
-      
+
+              <div class="col-lg-12 mx-auto">
+
+                    <div class="row">
+                        <div class="col-lg border-right">
+                          <h2>So come on, why is this so cheesy?</h2>
+                        </div>
+
+                        <div class="col-lg">
+                          <p class="lead mb-5">We went out of our way to add the cheeese. Don't take it too seriously.</p>
+                        </div>
+                      </div>
                 </div>
 
-              <div class="col-md-6 col-sm-12">
-              <i class="fas fa-pen fa-3x"></i><br><br>
-              <p class="lead mb-5">
-                  Meet us at the student center:
-                  here be ye dates
-                  </p>
-              </div>
 
-              </div>
-             <p class="lead mb-5">
-             Insert a meme somewhere, please. <br>
+                      <div class="col-lg-12 mx-auto">
 
-             All proceeds will go to raising funds for LU's ACM student chapter.
-             </p> 
-            
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/">Home</a>
+                    <div class="row">
+                        <div class="col-lg border-right">
+                          <h2>Who chose these questions?</h2>
+                        </div>
+
+                        <div class="col-lg">
+                          <p class="lead mb-5">A couple of computer science and psychology students who had 
+                          too much time on their hands and terrible taste in memes. Most of these were compiled 
+                          with some actual thought behind what makes two people compatible, though.</p>
+                        </div>
+                      </div>
+
+                </div>
+              
+                      <div class="col-lg-12 mx-auto">
+
+                    <div class="row">
+                        <div class="col-lg border-right">
+                          <h2>What improvements were made since the last bisonmatch?</h2>
+                        </div>
+
+                        <div class="col-lg">
+                          <p class="lead mb-5">We added the fun feature of uploading your picture so that 
+                          potential matches could see you before they decide to 'take the plunge' and ask you on a date.
+                          We also added more free-form general questions (what is your ideal date?) etc and new ways for 
+                          you to pay.</p>
+                        </div>
+                      </div>
+                </div>
+
+                    <div class="col-lg-12 mx-auto">
+
+                    <div class="row">
+                        <div class="col-lg border-right">
+                          <h2>Do you really care about my love life?</h2>
+                        </div>
+
+                        <div class="col-lg">
+                          <p class="lead mb-5">Only as much as you care about ours.</p>
+                        </div>
+                      </div>
+                </div>
+
+                      <div class="col-lg-12 mx-auto">
+                    <div class="row">
+                        <div class="col-lg border-right">
+                          <h2>Can we ask you a question?</h2>
+                        </div>
+
+                        <div class="col-lg">
+                          <p class="lead mb-5">Yes, you can't deny us. Send us any funny/ interesting dates that come out 
+                          of this. We LOVE reading your responses and will put up any interesting ones (with names blurred out) on our instagram.
+
+                          </p>
+                        </div>
+                      </div>
+
+                      </div>
+                  <div class="col-lg-12 mx-auto">
+                    <div class="row">
+                        <div class="col-lg border-right">
+                          <h2>I'm having troubles with the quiz. Who can I contact?</h2>
+                        </div>
+
+                        <div class="col-lg">
+                          <p class="lead mb-5">If you have ANY problems, questions, concerns, future improvements PLEASE email us at 
+                          <a href="mail-to:bisonmatch@lipscomb.edu">bisonmatch@lipscomb.edu</a> or send us a direct message on instagram @bisonmatch.
+                          We would love to hear from you.
+                          </p>
+                        </div>
+                      </div>
+                </div>
+
+    
+                   </div>
+
+
+              <p class="lead mb-5 pad-me">
+              All proceeds will go to raising funds for LU's ACM student chapter.
+              </p> 
+              <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/">Home</a>
+
+
           </div>
         </div>
-      </div>
     </section>
 
 {% endblock %}
