--- a/bisonMatchApp/templates/bisonMatchApp/includes/head.html
+++ b/bisonMatchApp/templates/bisonMatchApp/includes/head.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap Core CSS -->
   <link href={% static "bisonMatchApp/vendor/bootstrap/css/bootstrap.min.css" %} rel="stylesheet">
-
+  <link rel="shortcut icon" href="{%  static 'bisonMatchApp/img/favicon-32x32.png' %}">
   <!-- Custom Fonts -->
   <link href={% static "bisonMatchApp/vendor/fontawesome-free/css/all.min.css" %} rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
